@@ -2189,6 +2189,10 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
         // reset max-rows to default value
         this.sessionMaxRows = -1;
 
+        // preconfigure some server variables which are consulted before their initialization from server
+        this.serverVariables = new HashMap<String, String>();
+        this.serverVariables.put("character_set_server", "utf8");
+
         this.io = new MysqlIO(newHost, newPort, mergedProps, getSocketFactoryClassName(), getProxy(), getSocketTimeout(),
                 this.largeRowSizeThreshold.getValueAsInt());
         this.io.doHandshake(this.user, this.password, this.database);
@@ -3236,6 +3240,22 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
 
             buildCollationMapping();
 
+            // Trying to workaround server collations with index > 255. Such index doesn't fit into server greeting packet, 0 is sent instead.
+            // Now we could set io.serverCharsetIndex according to "collation_server" value.
+            if (this.io.serverCharsetIndex == 0) {
+                String collationServer = this.serverVariables.get("collation_server");
+                if (collationServer != null) {
+                    for (int i = 1; i < CharsetMapping.COLLATION_INDEX_TO_COLLATION_NAME.length; i++) {
+                        if (CharsetMapping.COLLATION_INDEX_TO_COLLATION_NAME[i].equals(collationServer)) {
+                            this.io.serverCharsetIndex = i;
+                        }
+                    }
+                } else {
+                    // We can't do more, just trying to use utf8mb4_general_ci because the most of collations in that range are utf8mb4.
+                    this.io.serverCharsetIndex = 45;
+                }
+            }
+
             LicenseConfiguration.checkLicenseType(this.serverVariables);
 
             String lowerCaseTables = this.serverVariables.get("lower_case_table_names");
@@ -3745,6 +3765,7 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
                     queryBuf.append(", @@character_set_connection AS character_set_connection");
                     queryBuf.append(", @@character_set_results AS character_set_results");
                     queryBuf.append(", @@character_set_server AS character_set_server");
+                    queryBuf.append(", @@collation_server AS collation_server");
                     queryBuf.append(", @@init_connect AS init_connect");
                     queryBuf.append(", @@interactive_timeout AS interactive_timeout");
                     if (!versionMeetsMinimum(5, 5, 0)) {
